animation and scale

--- a/src/view/ArmatureDisplayUIsGroup.mxml
+++ b/src/view/ArmatureDisplayUIsGroup.mxml
@@ -498,6 +498,7 @@
 							{
 								_boneDisplaySelected.filters = [_boneHighlightFilter];
 							}
+							_boneDisplayRollOver = null;
 						}
 					}
 				}
