--- a/src/view/CopyWindow.mxml
+++ b/src/view/CopyWindow.mxml
@@ -24,53 +24,39 @@
 			
 		]]>
 	</fx:Script>
-	<s:VGroup width="100%" height="100%" paddingBottom="10" paddingLeft="10" paddingRight="10"
-			  paddingTop="10">
-		<s:HGroup width="100%">
-			<s:Group width="50%">
-				<s:layout>
-					<s:BasicLayout/>
-				</s:layout>
-				<s:DropDownList id="sourceArmatures" y="0" width="80%"
-								horizontalCenter="0"
-								selectedItem="@{CopyDataProxy.getInstance().selectedSourceArmature}"
-								labelField="{ConstValues.AT + ConstValues.A_NAME}">
-					<s:dataProvider>
-						<s:XMLListCollection source="{CopyDataProxy.getInstance().copyArmaturesData}"/>
-					</s:dataProvider>
-				</s:DropDownList>
-			</s:Group>
-			<s:Group height="100%" width="{CENTER_SPACE}">
-				
-			</s:Group>
-			<s:Group width="50%">
-				<s:layout>
-					<s:BasicLayout/>
-				</s:layout>
-				<s:DropDownList id="destinationArmatures" width="80%"
-								horizontalCenter="0"
-								selectedItem="@{CopyDataProxy.getInstance().selectedDestinationArmature}"
-								labelField="{ConstValues.AT + ConstValues.A_NAME}">
-					<s:dataProvider>
-						<s:XMLListCollection source="{CopyDataProxy.getInstance().copyArmaturesData}"/>
-					</s:dataProvider>
-				</s:DropDownList>
-			</s:Group>
+	<s:VGroup width="100%" height="100%" gap="10" paddingBottom="10" paddingLeft="10"
+			  paddingRight="10" paddingTop="10">
+		<s:HGroup width="100%" gap="0">
+			<s:DropDownList id="sourceArmatures" width="100%"
+							labelField="{ConstValues.AT + ConstValues.A_NAME}"
+							selectedItem="@{CopyDataProxy.getInstance().selectedSourceArmature}">
+				<s:dataProvider>
+					<s:XMLListCollection source="{CopyDataProxy.getInstance().copyArmaturesData}"/>
+				</s:dataProvider>
+			</s:DropDownList>
+			<s:Spacer width="{CENTER_SPACE}"/>
+			<s:DropDownList id="destinationArmatures" width="100%"
+							selectedItem="@{CopyDataProxy.getInstance().selectedDestinationArmature}"
+							labelField="{ConstValues.AT + ConstValues.A_NAME}">
+				<s:dataProvider>
+					<s:XMLListCollection source="{CopyDataProxy.getInstance().copyArmaturesData}"/>
+				</s:dataProvider>
+			</s:DropDownList>
 		</s:HGroup>
-
-		<mx:TabNavigator width="100%" height="200">
+		<mx:TabNavigator width="100%" height="100%" paddingBottom="2" paddingLeft="2" paddingRight="2"
+						 paddingTop="2">
 			<s:NavigatorContent label="Bones" width="100%" height="100%">
 				<s:layout>
 					<s:BasicLayout/>
 				</s:layout>
-				<s:HGroup width="100%" height="100%">
+				<s:HGroup width="100%" height="100%" gap="0">
 					<s:Group width="50%" height="100%">
 						<mx:Tree width="100%" height="100%"
-											 labelField="{ConstValues.AT + ConstValues.A_NAME}" textRollOverColor="#CCCCCC"
-											 textSelectedColor="#CCCCCC"
-											 folderClosedIcon="@Embed(source='./assets/armature_icon.png')"
-											 folderOpenIcon="@Embed(source='./assets/armature_open_icon.png')"
-											 defaultLeafIcon="@Embed(source='./assets/bone_icon.png')">
+								 labelField="{ConstValues.AT + ConstValues.A_NAME}" textRollOverColor="#CCCCCC"
+								 textSelectedColor="#CCCCCC"
+								 folderClosedIcon="@Embed(source='./assets/armature_icon.png')"
+								 folderOpenIcon="@Embed(source='./assets/armature_open_icon.png')"
+								 defaultLeafIcon="@Embed(source='./assets/bone_icon.png')">
 							<mx:dataProvider>
 								<s:XMLListCollection source="{CopyDataProxy.getInstance().selectedSourceBoneList}">
 								</s:XMLListCollection>
@@ -82,21 +68,21 @@
 					</s:Group>
 					<s:Group width="50%" height="100%">
 						<mx:Tree width="100%" height="100%"
-								  labelField="{ConstValues.AT + ConstValues.A_NAME}" textRollOverColor="#CCCCCC"
-								  textSelectedColor="#CCCCCC"
-								  folderClosedIcon="@Embed(source='./assets/armature_icon.png')"
-								  folderOpenIcon="@Embed(source='./assets/armature_open_icon.png')"
-								  defaultLeafIcon="@Embed(source='./assets/bone_icon.png')">
-							 <mx:dataProvider>
-								 <s:XMLListCollection source="{CopyDataProxy.getInstance().selectedDestinaionBonelist}">
-								 </s:XMLListCollection>
-							 </mx:dataProvider>
-						 </mx:Tree>
+								 labelField="{ConstValues.AT + ConstValues.A_NAME}" textRollOverColor="#CCCCCC"
+								 textSelectedColor="#CCCCCC"
+								 folderClosedIcon="@Embed(source='./assets/armature_icon.png')"
+								 folderOpenIcon="@Embed(source='./assets/armature_open_icon.png')"
+								 defaultLeafIcon="@Embed(source='./assets/bone_icon.png')">
+							<mx:dataProvider>
+								<s:XMLListCollection source="{CopyDataProxy.getInstance().selectedDestinaionBonelist}">
+								</s:XMLListCollection>
+							</mx:dataProvider>
+						</mx:Tree>
 					</s:Group>
 				</s:HGroup>
 			</s:NavigatorContent>
 			<s:NavigatorContent label="behavior" width="100%" height="100%">
-				<s:HGroup width="100%" height="100%">
+				<s:HGroup width="100%" height="100%" gap="0">
 					<s:Group width="50%" height="100%">
 						<s:DataGrid width="100%" height="100%" sortableColumns="false" selectedItem="@{CopyDataProxy.getInstance().selectedSourceBehavior}">
 							<s:columns>
@@ -129,19 +115,12 @@
 				</s:HGroup>
 			</s:NavigatorContent>
 		</mx:TabNavigator>
-		
-		<s:HGroup width="100%" height="100%">
+		<s:HGroup width="100%" height="100%" gap="10">
 			<s:Group width="50%" height="100%">
 				<s:layout>
 					<s:BasicLayout/>
 				</s:layout>
 				<components:AnimationReviewPannel width="100%" height="100%" armature="{CopyDataProxy.getInstance().sourceDisplayArmature}"/>
-			</s:Group>
-			<s:Group height="100%" width="{CENTER_SPACE/2}">
-				<s:layout>
-					<s:BasicLayout/>
-				</s:layout>
-			<mx:VRule height="100%" horizontalCenter="0"/>
 			</s:Group>
 			<s:Group width="50%" height="100%">
 				<s:layout>
@@ -150,7 +129,6 @@
 				<components:AnimationReviewPannel width="100%" height="100%" armature="{CopyDataProxy.getInstance().destinationDisplayArmature}"/>
 			</s:Group>
 		</s:HGroup>
-	
 		<s:Group width="100%">
 			<s:layout>
 				<s:BasicLayout/>
