--- a/src/view/CopyWindow.mxml
+++ b/src/view/CopyWindow.mxml
@@ -77,7 +77,7 @@
 		<s:NavigatorContent label="behavior" width="100%" height="100%">
 			<s:HGroup width="100%" height="100%" gap="0">
 				<s:Group width="50%" height="100%">
-					<s:DataGrid width="100%" height="100%" sortableColumns="false" selectedItem="@{CopyDataProxy.getInstance().selectedSourceBehavior}">
+					<s:DataGrid width="100%" height="100%" sortableColumns="false" gridClick="CopyDataProxy.getInstance().playSourceBehavior(event.item)"  selectionMode="multipleRows" selectedItems="@{CopyDataProxy.getInstance().selectedMultipleSourceBehaviors}">
 						<s:columns>
 							<s:ArrayList>
 								<s:GridColumn dataField="{ConstValues.AT + ConstValues.A_NAME}" headerText="{resourceManager.getString('resources','behaviorList')}"/>
@@ -91,9 +91,13 @@
 				</s:Group>
 				<s:Group height="100%" width="{CENTER_SPACE}">
 					<s:Button label="copy" horizontalCenter="0" verticalCenter="0" width="50" enabled="{CopyDataProxy.getInstance().behaviorCopyable}" click="CopyDataProxy.getInstance().executeBehaviorCopy()"/>
+					<s:Button bottom="5" width="50" label="del"
+							  click="CopyDataProxy.getInstance().executeBehaviorCopy()"
+							  enabled="{CopyDataProxy.getInstance().behaviorDeletable}"
+							  horizontalCenter="0"/>
 				</s:Group>
 				<s:Group width="50%" height="100%">
-					<s:DataGrid width="100%" height="100%" sortableColumns="false" selectedItem="@{CopyDataProxy.getInstance().selectedDestinationBehavior}">
+					<s:DataGrid width="100%" height="100%" sortableColumns="false" gridClick="CopyDataProxy.getInstance().playDestinationBehavior(event.item)" selectionMode="multipleRows" selectedItems="@{CopyDataProxy.getInstance().selectedMultipleDestinationBehaviors}">
 						<s:columns>
 							<s:ArrayList>
 								<s:GridColumn dataField="{ConstValues.AT + ConstValues.A_NAME}" headerText="{resourceManager.getString('resources','behaviorList')}"/>
