--- a/src/SkeletonAnimationDesignPanel.mxml
+++ b/src/SkeletonAnimationDesignPanel.mxml
@@ -4,11 +4,10 @@
 			   xmlns:mx="library://ns.adobe.com/flex/mx"
 			   xmlns:view="view.*"
 			   addedToStage="addedToStageHandler()"
-			   preloader="prevloadClasses.Prevloader" width="1024" height="768"
+			   preloader="prevloadClasses.Prevloader" width="100%" height="100%"
 			   >
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
-		<view:CopyWindow id="copyWindow"/>
 	</fx:Declarations>
 	<fx:Script>
 		<![CDATA[
@@ -225,8 +224,11 @@
 			
 			private function popUpCopyWindow():void
 			{
+				copyWindow.visible = true;
+				/*
 				PopUpManager.addPopUp(copyWindow, this, true);
 				PopUpManager.centerPopUp(copyWindow);
+				*/
 			}
 			
 			private function navIndexChangeHandler(event:Event):void
@@ -334,4 +336,5 @@
 						selectedIndex="@{SettingDataProxy.getInstance().languageID}"
 						/>
 	</s:HGroup>
+	<view:CopyWindow id="copyWindow" visible="false"/>
 </s:Application>
