--- a/src/view/CopyWindow.mxml
+++ b/src/view/CopyWindow.mxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Panel xmlns:fx="http://ns.adobe.com/mxml/2009" 
-			   xmlns:s="library://ns.adobe.com/flex/spark" 
-			   xmlns:mx="library://ns.adobe.com/flex/mx" width="800" height="600" 
-			   xmlns:components="view.components.*" 
-			   xmlns:view="view.*"
-			   title="Behavior Copy"
-			   show="this_showHandler(event)">
+<s:SkinnableContainer xmlns:fx="http://ns.adobe.com/mxml/2009"
+					  xmlns:s="library://ns.adobe.com/flex/spark"
+					  xmlns:mx="library://ns.adobe.com/flex/mx"
+					  xmlns:components="view.components.*"
+					  xmlns:view="view.*"
+					  width="100%" height="100%" backgroundAlpha="0.5" backgroundColor="#CCCCCC"
+					  show="this_showHandler(event)">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
@@ -23,138 +23,135 @@
 			
 			private function closeCopySession():void
 			{
-				PopUpManager.removePopUp(this);
+				this.visible = false;
 				CopyDataProxy.getInstance().closeCopySession();
 			}
 			
 			protected function this_showHandler(event:FlexEvent):void
 			{
-				if(dividedBox != boneAndBehavior.parent)
-				{
-					removeElement(boneAndBehavior);
-					dividedBox.addElementAt(boneAndBehavior, 0);
-				}
 				CopyDataProxy.getInstance().openNewCopySession()
 			}
 			
 		]]>
 	</fx:Script>
-	<mx:TabNavigator id="boneAndBehavior" width="100%" height="100%" paddingBottom="2" paddingLeft="2"
-					 paddingRight="2" paddingTop="2">
-		<s:NavigatorContent label="Bones" width="100%" height="100%">
-			<s:HGroup width="100%" height="100%" gap="0">
-				<s:Group width="50%" height="100%">
-					<mx:Tree width="100%" height="100%"
-							 labelField="{ConstValues.AT + ConstValues.A_NAME}" textRollOverColor="#CCCCCC"
-							 textSelectedColor="#CCCCCC"
-							 folderClosedIcon="@Embed(source='./assets/armature_icon.png')"
-							 folderOpenIcon="@Embed(source='./assets/armature_open_icon.png')"
-							 defaultLeafIcon="@Embed(source='./assets/bone_icon.png')">
-						<mx:dataProvider>
-							<s:XMLListCollection source="{CopyDataProxy.getInstance().selectedSourceBoneList}">
-							</s:XMLListCollection>
-						</mx:dataProvider>
-					</mx:Tree>
-				</s:Group>
-				<s:Group height="100%" width="{CENTER_SPACE}">
-					<s:Button label="copy" horizontalCenter="0" verticalCenter="0" width="50" enabled="{CopyDataProxy.getInstance().boneCopyable}" click="CopyDataProxy.getInstance().executeBoneCopy()"/>
-				</s:Group>
-				<s:Group width="50%" height="100%">
-					<mx:Tree width="100%" height="100%"
-							 labelField="{ConstValues.AT + ConstValues.A_NAME}" textRollOverColor="#CCCCCC"
-							 textSelectedColor="#CCCCCC"
-							 folderClosedIcon="@Embed(source='./assets/armature_icon.png')"
-							 folderOpenIcon="@Embed(source='./assets/armature_open_icon.png')"
-							 defaultLeafIcon="@Embed(source='./assets/bone_icon.png')">
-						<mx:dataProvider>
-							<s:XMLListCollection source="{CopyDataProxy.getInstance().selectedDestinaionBonelist}">
-							</s:XMLListCollection>
-						</mx:dataProvider>
-					</mx:Tree>
-				</s:Group>
+	<s:Panel left="20" right="20" top="20" bottom="20" title="Behavior Copy">
+		<s:VGroup width="100%" height="100%" gap="10" paddingBottom="10" paddingLeft="10"
+				  paddingRight="10" paddingTop="10">
+			<s:HGroup width="100%" gap="0">
+				<s:DropDownList id="sourceArmatures" width="100%"
+								labelField="{ConstValues.AT + ConstValues.A_NAME}"
+								selectedItem="@{CopyDataProxy.getInstance().selectedSourceArmature}">
+					<s:dataProvider>
+						<s:XMLListCollection source="{CopyDataProxy.getInstance().copyArmaturesData}"/>
+					</s:dataProvider>
+				</s:DropDownList>
+				<s:Spacer width="{CENTER_SPACE}"/>
+				<s:DropDownList id="destinationArmatures" width="100%"
+								selectedItem="@{CopyDataProxy.getInstance().selectedDestinationArmature}"
+								labelField="{ConstValues.AT + ConstValues.A_NAME}">
+					<s:dataProvider>
+						<s:XMLListCollection source="{CopyDataProxy.getInstance().copyArmaturesData}"/>
+					</s:dataProvider>
+				</s:DropDownList>
 			</s:HGroup>
-		</s:NavigatorContent>
-		<s:NavigatorContent label="behavior" width="100%" height="100%">
-			<s:HGroup width="100%" height="100%" gap="0">
-				<s:Group width="50%" height="100%">
-					<s:DataGrid width="100%" height="100%" sortableColumns="false" gridClick="CopyDataProxy.getInstance().playSourceBehavior(event.item)"  selectionMode="multipleRows" selectedItems="@{CopyDataProxy.getInstance().selectedMultipleSourceBehaviors}">
-						<s:columns>
-							<s:ArrayList>
-								<s:GridColumn dataField="{ConstValues.AT + ConstValues.A_NAME}" headerText="{resourceManager.getString('resources','behaviorList')}"/>
-							</s:ArrayList>
-						</s:columns>
-						<s:dataProvider>
-							<s:XMLListCollection source="{CopyDataProxy.getInstance().selectedSourceBehaviorList}">
-							</s:XMLListCollection>
-						</s:dataProvider>
-					</s:DataGrid>
-				</s:Group>
-				<s:Group height="100%" width="{CENTER_SPACE}">
-					<s:Button label="copy" horizontalCenter="0" verticalCenter="0" width="50" enabled="{CopyDataProxy.getInstance().behaviorCopyable}" click="CopyDataProxy.getInstance().executeBehaviorCopy()"/>
-					<s:Button bottom="5" width="50" label="del"
-							  click="CopyDataProxy.getInstance().executeBehaviorDelete()"
-							  enabled="{CopyDataProxy.getInstance().behaviorDeletable}"
-							  horizontalCenter="0"/>
-				</s:Group>
-				<s:Group width="50%" height="100%">
-					<s:DataGrid width="100%" height="100%" sortableColumns="false" gridClick="CopyDataProxy.getInstance().playDestinationBehavior(event.item)" selectionMode="multipleRows" selectedItems="@{CopyDataProxy.getInstance().selectedMultipleDestinationBehaviors}">
-						<s:columns>
-							<s:ArrayList>
-								<s:GridColumn dataField="{ConstValues.AT + ConstValues.A_NAME}" headerText="{resourceManager.getString('resources','behaviorList')}"/>
-							</s:ArrayList>
-						</s:columns>
-						<s:dataProvider>
-							<s:XMLListCollection source="{CopyDataProxy.getInstance().selectedDestinaionBehaviorList}">
-							</s:XMLListCollection>
-						</s:dataProvider>
-					</s:DataGrid>
-				</s:Group>
-			</s:HGroup>
-		</s:NavigatorContent>
-	</mx:TabNavigator>
-	<s:VGroup width="100%" height="100%" gap="10" paddingBottom="10" paddingLeft="10"
-			  paddingRight="10" paddingTop="10">
-		<s:HGroup width="100%" gap="0">
-			<s:DropDownList id="sourceArmatures" width="100%"
-							labelField="{ConstValues.AT + ConstValues.A_NAME}"
-							selectedItem="@{CopyDataProxy.getInstance().selectedSourceArmature}">
-				<s:dataProvider>
-					<s:XMLListCollection source="{CopyDataProxy.getInstance().copyArmaturesData}"/>
-				</s:dataProvider>
-			</s:DropDownList>
-			<s:Spacer width="{CENTER_SPACE}"/>
-			<s:DropDownList id="destinationArmatures" width="100%"
-							selectedItem="@{CopyDataProxy.getInstance().selectedDestinationArmature}"
-							labelField="{ConstValues.AT + ConstValues.A_NAME}">
-				<s:dataProvider>
-					<s:XMLListCollection source="{CopyDataProxy.getInstance().copyArmaturesData}"/>
-				</s:dataProvider>
-			</s:DropDownList>
-		</s:HGroup>
-		
-		<mx:VDividedBox id="dividedBox" width="100%" height="100%">
-			<s:HGroup width="100%" height="100%" gap="10">
-				<s:Group width="50%" height="100%">
-					<s:layout>
-						<s:BasicLayout/>
-					</s:layout>
-					<components:AnimationReviewPannel width="100%" height="100%" armature="{CopyDataProxy.getInstance().sourceDisplayArmature}"/>
-				</s:Group>
-				<s:Group width="50%" height="100%">
-					<s:layout>
-						<s:BasicLayout/>
-					</s:layout>
-					<components:AnimationReviewPannel width="100%" height="100%" armature="{CopyDataProxy.getInstance().destinationDisplayArmature}"/>
-				</s:Group>
-			</s:HGroup>
-		</mx:VDividedBox>
-		
-		<s:Group width="100%">
-			<s:layout>
-				<s:BasicLayout/>
-			</s:layout>
-			<s:Button right="100" label="Save" click="CopyDataProxy.getInstance().save()"/>
-			<s:Button right="10" label="Cancel" click="closeCopySession()"/>
-		</s:Group>
-	</s:VGroup>
-</s:Panel>
+			
+			<mx:VDividedBox id="dividedBox" width="100%" height="100%">
+				<mx:TabNavigator id="boneAndBehavior" width="100%" height="100%" paddingBottom="2" paddingLeft="2"
+								 paddingRight="2" paddingTop="2">
+					<s:NavigatorContent label="Bones" width="100%" height="100%">
+						<s:HGroup width="100%" height="100%" gap="0">
+							<s:Group width="50%" height="100%">
+								<mx:Tree width="100%" height="100%"
+										 labelField="{ConstValues.AT + ConstValues.A_NAME}" textRollOverColor="#CCCCCC"
+										 textSelectedColor="#CCCCCC"
+										 folderClosedIcon="@Embed(source='./assets/armature_icon.png')"
+										 folderOpenIcon="@Embed(source='./assets/armature_open_icon.png')"
+										 defaultLeafIcon="@Embed(source='./assets/bone_icon.png')">
+									<mx:dataProvider>
+										<s:XMLListCollection source="{CopyDataProxy.getInstance().selectedSourceBoneList}">
+										</s:XMLListCollection>
+									</mx:dataProvider>
+								</mx:Tree>
+							</s:Group>
+							<s:Group height="100%" width="{CENTER_SPACE}">
+								<s:Button label="copy" horizontalCenter="0" verticalCenter="0" width="50" enabled="{CopyDataProxy.getInstance().boneCopyable}" click="CopyDataProxy.getInstance().executeBoneCopy()"/>
+							</s:Group>
+							<s:Group width="50%" height="100%">
+								<mx:Tree width="100%" height="100%"
+										 labelField="{ConstValues.AT + ConstValues.A_NAME}" textRollOverColor="#CCCCCC"
+										 textSelectedColor="#CCCCCC"
+										 folderClosedIcon="@Embed(source='./assets/armature_icon.png')"
+										 folderOpenIcon="@Embed(source='./assets/armature_open_icon.png')"
+										 defaultLeafIcon="@Embed(source='./assets/bone_icon.png')">
+									<mx:dataProvider>
+										<s:XMLListCollection source="{CopyDataProxy.getInstance().selectedDestinaionBonelist}">
+										</s:XMLListCollection>
+									</mx:dataProvider>
+								</mx:Tree>
+							</s:Group>
+						</s:HGroup>
+					</s:NavigatorContent>
+					<s:NavigatorContent label="behavior" width="100%" height="100%">
+						<s:HGroup width="100%" height="100%" gap="0">
+							<s:Group width="50%" height="100%">
+								<s:DataGrid width="100%" height="100%" sortableColumns="false" gridClick="CopyDataProxy.getInstance().playSourceBehavior(event.item)"  selectionMode="multipleRows" selectedItems="@{CopyDataProxy.getInstance().selectedMultipleSourceBehaviors}">
+									<s:columns>
+										<s:ArrayList>
+											<s:GridColumn dataField="{ConstValues.AT + ConstValues.A_NAME}" headerText="{resourceManager.getString('resources','behaviorList')}"/>
+										</s:ArrayList>
+									</s:columns>
+									<s:dataProvider>
+										<s:XMLListCollection source="{CopyDataProxy.getInstance().selectedSourceBehaviorList}">
+										</s:XMLListCollection>
+									</s:dataProvider>
+								</s:DataGrid>
+							</s:Group>
+							<s:Group height="100%" width="{CENTER_SPACE}">
+								<s:Button label="copy" horizontalCenter="0" verticalCenter="0" width="50" enabled="{CopyDataProxy.getInstance().behaviorCopyable}" click="CopyDataProxy.getInstance().executeBehaviorCopy()"/>
+								<s:Button bottom="5" width="50" label="del"
+										  click="CopyDataProxy.getInstance().executeBehaviorDelete()"
+										  enabled="{CopyDataProxy.getInstance().behaviorDeletable}"
+										  horizontalCenter="0"/>
+							</s:Group>
+							<s:Group width="50%" height="100%">
+								<s:DataGrid width="100%" height="100%" sortableColumns="false" gridClick="CopyDataProxy.getInstance().playDestinationBehavior(event.item)" selectionMode="multipleRows" selectedItems="@{CopyDataProxy.getInstance().selectedMultipleDestinationBehaviors}">
+									<s:columns>
+										<s:ArrayList>
+											<s:GridColumn dataField="{ConstValues.AT + ConstValues.A_NAME}" headerText="{resourceManager.getString('resources','behaviorList')}"/>
+										</s:ArrayList>
+									</s:columns>
+									<s:dataProvider>
+										<s:XMLListCollection source="{CopyDataProxy.getInstance().selectedDestinaionBehaviorList}">
+										</s:XMLListCollection>
+									</s:dataProvider>
+								</s:DataGrid>
+							</s:Group>
+						</s:HGroup>
+					</s:NavigatorContent>
+				</mx:TabNavigator>
+				<s:HGroup width="100%" height="100%" gap="10">
+					<s:Group width="50%" height="100%">
+						<s:layout>
+							<s:BasicLayout/>
+						</s:layout>
+						<components:AnimationReviewPannel width="100%" height="100%" armature="{CopyDataProxy.getInstance().sourceDisplayArmature}"/>
+					</s:Group>
+					<s:Group width="50%" height="100%">
+						<s:layout>
+							<s:BasicLayout/>
+						</s:layout>
+						<components:AnimationReviewPannel width="100%" height="100%" armature="{CopyDataProxy.getInstance().destinationDisplayArmature}"/>
+					</s:Group>
+				</s:HGroup>
+			</mx:VDividedBox>
+			
+			<s:Group width="100%">
+				<s:layout>
+					<s:BasicLayout/>
+				</s:layout>
+				<s:Button right="100" label="Save" click="CopyDataProxy.getInstance().save()"/>
+				<s:Button right="10" label="Cancel" click="closeCopySession()"/>
+			</s:Group>
+		</s:VGroup>
+	</s:Panel>
+</s:SkinnableContainer>
