--- a/src/view/CopyWindow.mxml
+++ b/src/view/CopyWindow.mxml
@@ -38,6 +38,11 @@
 		<s:VGroup width="100%" height="100%" gap="10" paddingBottom="10" paddingLeft="10"
 				  paddingRight="10" paddingTop="10">
 			<s:HGroup width="100%" gap="0">
+				<s:Label width="100%" text="Source:"/>
+				<s:Spacer width="{CENTER_SPACE}"/>
+				<s:Label width="100%" text="Target:"/>
+			</s:HGroup>
+			<s:HGroup width="100%" gap="0">
 				<s:DropDownList id="sourceArmatures" width="100%"
 								labelField="{ConstValues.AT + ConstValues.A_NAME}"
 								selectedItem="@{CopyDataProxy.getInstance().selectedSourceArmature}">
@@ -54,7 +59,6 @@
 					</s:dataProvider>
 				</s:DropDownList>
 			</s:HGroup>
-			
 			<mx:VDividedBox id="dividedBox" width="100%" height="100%">
 				<mx:TabNavigator id="boneAndBehavior" width="100%" height="100%" paddingBottom="2" paddingLeft="2"
 								 paddingRight="2" paddingTop="2">
@@ -102,22 +106,23 @@
 							</s:DataGrid>
 							<s:Group height="100%" width="{CENTER_SPACE}">
 								<s:Button label="copy" horizontalCenter="0" verticalCenter="0" width="50" enabled="{CopyDataProxy.getInstance().behaviorCopyable}" click="CopyDataProxy.getInstance().executeBehaviorCopy()"/>
-								<s:Button bottom="5" width="50" label="del"
-										  click="CopyDataProxy.getInstance().executeBehaviorDelete()"
-										  enabled="{CopyDataProxy.getInstance().behaviorDeletable}"
-										  horizontalCenter="0"/>
 							</s:Group>
-							<s:DataGrid width="100%" height="100%" sortableColumns="false" gridClick="CopyDataProxy.getInstance().playDestinationBehavior(event.item)" selectionMode="multipleRows" selectedItems="@{CopyDataProxy.getInstance().selectedMultipleDestinationBehaviors}">
-								<s:columns>
-									<s:ArrayList>
-										<s:GridColumn dataField="{ConstValues.AT + ConstValues.A_NAME}" headerText="{resourceManager.getString('resources','behaviorList')}"/>
-									</s:ArrayList>
-								</s:columns>
-								<s:dataProvider>
-									<s:XMLListCollection source="{CopyDataProxy.getInstance().selectedDestinaionBehaviorList}">
-									</s:XMLListCollection>
-								</s:dataProvider>
-							</s:DataGrid>
+							<s:Group width="100%" height="100%">
+								<s:DataGrid width="100%" height="100%" sortableColumns="false" gridClick="CopyDataProxy.getInstance().playDestinationBehavior(event.item)" selectionMode="multipleRows" selectedItems="@{CopyDataProxy.getInstance().selectedMultipleDestinationBehaviors}">
+									<s:columns>
+										<s:ArrayList>
+											<s:GridColumn dataField="{ConstValues.AT + ConstValues.A_NAME}" headerText="{resourceManager.getString('resources','behaviorList')}"/>
+										</s:ArrayList>
+									</s:columns>
+									<s:dataProvider>
+										<s:XMLListCollection source="{CopyDataProxy.getInstance().selectedDestinaionBehaviorList}">
+										</s:XMLListCollection>
+									</s:dataProvider>
+								</s:DataGrid>
+								<s:Button right="0" width="50" label="del"
+										  click="CopyDataProxy.getInstance().executeBehaviorDelete()"
+										  enabled="{CopyDataProxy.getInstance().behaviorDeletable}"/>
+							</s:Group>
 						</s:HGroup>
 					</s:NavigatorContent>
 				</mx:TabNavigator>
