--- a/src/view/ArmatureDisplayUIsGroup.mxml
+++ b/src/view/ArmatureDisplayUIsGroup.mxml
@@ -2,6 +2,7 @@
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
+		 xmlns:components="view.components.*"
 		 creationComplete="addedToStageHandler(event)"
 		 >
 	<fx:Script>
@@ -510,16 +511,21 @@
 			<s:SolidColorStroke color="0x000000" weight="1"/>
 		</s:stroke>
 	</s:Rect>
-	<s:Scroller id="scrollerViewer" width="100%" height="100%">
+	<s:Scroller id="scrollerViewer" width="100%" height="100%" horizontalScrollPolicy="off" verticalScrollPolicy="off">
 		<s:Group>
 			<s:Group id="viewContainerGroup">
 				<mx:UIComponent id="viewContainer"/>
 			</s:Group>
 		</s:Group>
 	</s:Scroller>
-	<s:Button id="btnZoomOut" x="5" y="5" width="35" height="20" label="－"/>
-	<s:Button id="btnZoomIn" x="150" y="5" width="35" height="20" label="＋"/>
-	<s:HSlider id="sliderScale" x="45" y="10" width="100"
-			   minimum="0.1" maximum="10" snapInterval="0.1"
-			   />
+	<s:HGroup bottom="2" left="2" right="2" width="100%" verticalAlign="middle" gap="2">
+		<components:ColorPickerNoColor label="{resourceManager.getString('resources','boneHighlight')}"
+									   selectedColor="@{SettingDataProxy.getInstance().boneHighlightColor}"/>
+		<s:Spacer width="100%"/>
+		<s:Button id="btnZoomOut" width="32" label="－"/>
+		<s:HSlider id="sliderScale" width="400%" maxWidth="100"
+				   minimum="0.1" maximum="10" snapInterval="0.1"
+				   />
+		<s:Button id="btnZoomIn" width="32" label="＋"/>
+	</s:HGroup>
 </s:Group>
